Rücksetzen auf unkalibriert nur bei Kondensatoren > 4.5uF und negativem ESR.
Alle Bitmaps für den ST7565 Controller sind in bitmaps.h definiert.
Optimierte Bitmaps für den ST7565 Controller um Platz zu sparen.
Kondensator für Abgleich muß fünf Mal statt zwei Mal hintereinander erkannt werden.
Überlaufproblem bei GetESR (cap_val_nF) beseitigt.
Erkennung von JFET und BJT mit Reststrom nochmals verbessert.
Wartezeit vor der Ausgabe des Hilfetextes entfernt.
Unterstützung von 8x8 und 8x16 character Fonts für ST7565 Controller, Dank an Nick L. .
Kontrasteinstellung für ST7565 Controller als Menüfunktion.
5ms Wartezeit nach Cursor Home bei der LCD Initialisierung wegen Problem bei Diodensymbol.
Benutzung des internen Kalibrier-Kondensators für ATmega644/1284 .
Anpassung der Initialisierung von OLED Displays.
Externe Spannungsmessung nur mit der Makefile Option WITH_VEXT .
Für die höchste Auflösung bei Impulsdrehgebern ohne Rastung WITH_ROTARY_SWITCH=5 .
Die Vergangenheit der Drehgeber-Zustände wird nicht mehr bei jedem wait_for_key_ms Aufruf gelöscht.
Auch getrennte Up / Down Taster können anstelle des Drehimpulsgebers verwendet werden.
Der automatische Wechsel der Menüfunktion nach 5 Sekunden wurde deaktiviert.
Reihenfolge der Beispielfrequenzen geändert.
Unterstützung eines Drehimpulsgebers an PD2 und PD3 für mega328 für einfachere Menü-Bedienung.
Bei Frequenzmessung mit 4-zeiligem Display werden für Periodenmessung Zeile 3+4 genutzt.
Flip für ST7565 Kontroller horizontal und vertikal getrennt wählbar.
Für den Selbsttest wird der Kalibrationsteil mit dem externen Kondensator nur durchgeführt,
 wenn zum ersten mal kalibriert wird oder der Selbsttest mit der Menufunktion aufgerufen wird.
Menü-Funktion für vollständigen Selbsttest, bei Transistortester mit kurzgeschlossenen Testpins
  wird bei freigeschalteter Menüfunktion nur der Kalibrationsteil aufgerufen.
Menü-Funktion für Test von Impulsdrehgebern.