@@ -21,15 +21,15 @@ Idx Name          Size      VMA       LMA       File off  Algn
                   CONTENTS, READONLY, DEBUGGING
   8 .debug_abbrev 00001102  00000000  00000000  0000a8d1  2**0
                   CONTENTS, READONLY, DEBUGGING
-  9 .debug_line   00001bb0  00000000  00000000  0000b9d3  2**0
+  9 .debug_line   00001bb2  00000000  00000000  0000b9d3  2**0
                   CONTENTS, READONLY, DEBUGGING
- 10 .debug_frame  0000051c  00000000  00000000  0000d584  2**2
+ 10 .debug_frame  0000051c  00000000  00000000  0000d588  2**2
                   CONTENTS, READONLY, DEBUGGING
- 11 .debug_str    00000be1  00000000  00000000  0000daa0  2**0
+ 11 .debug_str    00000be1  00000000  00000000  0000daa4  2**0
                   CONTENTS, READONLY, DEBUGGING
- 12 .debug_loc    00003bd9  00000000  00000000  0000e681  2**0
+ 12 .debug_loc    00003bd9  00000000  00000000  0000e685  2**0
                   CONTENTS, READONLY, DEBUGGING
- 13 .debug_ranges 00000018  00000000  00000000  0001225a  2**0
+ 13 .debug_ranges 00000018  00000000  00000000  0001225e  2**0
                   CONTENTS, READONLY, DEBUGGING
 
 Disassembly of section .text:
@@ -9929,10 +9929,10 @@ ad_3924:
     305a:	27 30       	cpi	r18, 0x07	; 7
  	brne	no_sub;			/* it is not a capacitor */
     305c:	c1 f4       	brne	.+48     	; 0x308e <no_sub>
-/* Aproximation of 5000*(1 - exp(13.5e-6/(cap_val_nF*1.e-9*(0.1*(PIN_RM+PIN_RP+R_L_VAL)))) - 2500*(1 - exp(-27e-6/(cap_val_nF*1.e-9*(0.1*(PIN_RM+PIN_RP+R_L_VAL))))) */
 /*  is done by ((6744116/(PIN_RM+PIN_RP+R_L_VAL))*(6744116/(PIN_RM+PIN_RP+R_L_VAL))) / (cap_val_nF * (cap_val_nF + (137180/(PIN_RM+PIN_RP+R_L_VAL)))) */
 /*  is done by 872520 / (cap_val_nF * (cap_val_nF + 19)) */
- #define FAKTOR_ESR (9537620/(PIN_RM+PIN_RP+R_L_VAL))
+; #define FAKTOR_ESR (9537620/(PIN_RM+PIN_RP+R_L_VAL))
+ #define FAKTOR_ESR (8500000/(PIN_RM+PIN_RP+R_L_VAL))
 
 	ldd	r22, Y+cap_val_nF;	/* sumvolt1 -= (1745098UL*MAX_CNT) / (cap_val_nF * (cap_val_nF + 19)); */
     305e:	6c 89       	ldd	r22, Y+20	; 0x14
@@ -9963,13 +9963,13 @@ ad_3924:
        	movw	r20, r24;
     3078:	ac 01       	movw	r20, r24
        	ldi	r22, lo8(FAKTOR_ESR*FAKTOR_ESR*MAX_CNT); 0x36; 54
-    307a:	6f e6       	ldi	r22, 0x6F	; 111
+    307a:	6f e8       	ldi	r22, 0x8F	; 143
        	ldi	r23, hi8(FAKTOR_ESR*FAKTOR_ESR*MAX_CNT); 0x29; 41
-    307c:	70 ef       	ldi	r23, 0xF0	; 240
+    307c:	7d e4       	ldi	r23, 0x4D	; 77
        	ldi	r24, hlo8(FAKTOR_ESR*FAKTOR_ESR*MAX_CNT); 0x86; 134
-    307e:	85 e8       	ldi	r24, 0x85	; 133
+    307e:	8e e0       	ldi	r24, 0x0E	; 14
        	ldi	r25, hhi8(FAKTOR_ESR*FAKTOR_ESR*MAX_CNT); 0x1A; 26
-    3080:	9a e1       	ldi	r25, 0x1A	; 26
+    3080:	95 e1       	ldi	r25, 0x15	; 21
 	call	__udivmodsi4;
     3082:	0e 94 32 1f 	call	0x3e64	; 0x3e64 <__udivmodsi4>
 	sub	r6, r18
