@@ -1,3 +1,4 @@
+FAKTOR_ESR für die ESR Korrektur kleiner Kapazitätswerte angepaßt.
 Rücksetzen auf unkalibriert nur bei Kondensatoren > 4.5uF und negativem ESR.
 Alle Bitmaps für den ST7565 Controller sind in bitmaps.h definiert.
 Optimierte Bitmaps für den ST7565 Controller um Platz zu sparen.
